# HDRFilmsBot

./: .gitignore  README.md  alembic.sample.ini  config.sample.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_.py  003_remove_is_film_from_downloadeditem.py
src/: __init__.py  __main__.py  basic_data.py  cache.py  config.py  constants.py  encrypt_utils.py  enums.py  keyboards.py  models.py  utils.py
src/background_tasks/: __init__.py  cleanup_expired_cache.py  download_items_queue.py  track_series.py
src/db/: __init__.py  base.py  models.py  utils.py
src/handlers/: __init__.py  payments.py  search.py  short_info.py  start.py
src/handlers/callback_query/: __init__.py  item.py  subscription.py  update_translators.py
src/middlewares/: __init__.py  db_session.py  db_users.py  throttling.py
